--- a/app/src/main/res/values/template-styles.xml
+++ b/app/src/main/res/values/template-styles.xml
@@ -1,13 +1,14 @@
 <resources>
 
-    <!-- Activity themes -->
+<!--
+    &lt;!&ndash; Activity themes &ndash;&gt;
 
     <style name="Theme.Base" parent="android:Theme.Light" />
 
     <style name="Theme.Sample" parent="Theme.Base" />
 
     <style name="AppTheme" parent="Theme.Sample" />
-    <!-- Widget styling -->
+    &lt;!&ndash; Widget styling &ndash;&gt;
 
     <style name="Widget" />
 
@@ -22,5 +23,6 @@
         <item name="android:shadowDy">-3.5</item>
         <item name="android:shadowRadius">2</item>
     </style>
+-->
 
 </resources>
