--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/sample_main_layout">
-
-    <ViewAnimator
+ <ViewAnimator
           android:id="@+id/sample_output"
           android:layout_width="match_parent"
           android:layout_height="0px"
@@ -41,10 +40,10 @@
           android:background="@android:color/darker_gray" />
 
     <FrameLayout
+        android:layout_margin="5dp"
           android:id="@+id/sample_content_fragment"
-          android:layout_weight="2"
           android:layout_width="match_parent"
-          android:layout_height="0px" />
+          android:layout_height="match_parent" />
 
 </LinearLayout>
 
