--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:text="Message Demo"
-          android:layout_height="wrap_content"
-          android:padding="5dp"
-          android:textSize="18sp"
-    />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/listview_background"
+    android:padding="20dp"
+    android:text="Message Demo"
+    android:textColor="#000"
+    android:textSize="18sp" />
