--- a/app/src/main/res/values/base-strings.xml
+++ b/app/src/main/res/values/base-strings.xml
@@ -22,12 +22,12 @@
         
             
             This application allows two Android devices to carry out two-way text chat over
-            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilites, such as:
-              (1) Scanning for other Bluetooth devices
-              (2) Querying the local Bluetooth adapter for paired Bluetooth devices
-              (3) Establishing RFCOMM channels/sockets
-              (4) Connecting to a remote device
-              (5) Transfering data over Bluetooth
+            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilites, such as:\n\n\n
+              (1) Scanning for other Bluetooth devices\n\n
+              (2) Querying the local Bluetooth adapter for paired BT devices\n\n
+              (3) Establishing RFCOMM channels/sockets\n\n
+              (4) Connecting to a remote device\n\n
+              (5) Transfering data over Bluetoothn\n\n
             
         
         ]]>
