--- a/app/src/main/res/layout/fragment_bluetooth_chat.xml
+++ b/app/src/main/res/layout/fragment_bluetooth_chat.xml
@@ -17,6 +17,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
+        <ImageView
+            android:id="@+id/camera"
+            android:background="@android:drawable/ic_menu_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.20"
+            android:layout_gravity="bottom"
+            />
+
+
+
         <EditText
             android:id="@+id/edit_text_out"
             android:layout_width="wrap_content"
